<resources>
    <string name="app_name" translatable="false">MPC-HC Remote</string>
    <string name="action_settings">Settings</string>

    <!-- Nav bar related strings -->
    <string name="edit_mode_switch">Edit mode</string>
    <string name="file_manager">File browser</string>
    <string name="settings">Settings</string>
    <string name="rescan_server">Rescan server</string>
    <string name="help">Help</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="prefscreen_im_feeling_lucky">I\'m Feeling Lucky</string>
    <string name="prefscreen_im_feeling_lucky_summary">Connect to the first server that is found</string>


    <!--Nav bar related-->
    <string name="fileName">File name:</string>
    <string name="status_playing">Playing</string>
    <string name="status_paused">Paused</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_no_file_selected">No file selected</string>
    <string name="toast_connected_to">Connected to</string>


    <!--Visible preferences related-->

    <string name="visible_pref_server">Server</string>
    <string name="visible_pref_server_settings">Server settings</string>
    <string name="visible_pref_basic">Basic</string>
    <string name="visible_pref_server_finder">Server finder</string>
    <string name="visible_pref_server_finder_summary">Search for servers in your network</string>
    <string name="visible_pref_server_ip">Server IP</string>
    <string name="visible_pref_custom_port">Custom port</string>
    <string name="visible_pref_advanced">Advanced</string>
    <string name="visible_pref_connection_timeout">Connection timeout</string>
    <string name="visible_pref_server_finder_retries">Server finder retries</string>

    <string name="visible_pref_buttons">Buttons</string>
    <string name="visible_pref_volume_jump">Volume jump</string>
    <string name="visible_pref_time_jump">Time jump</string>
    <string name="visible_pref_use_physical_volume_buttons">Use physical volume buttons</string>
    <string name="visible_pref_screen">Screen</string>
    <string name="visible_pref_keep_screen_on">Keep screen on</string>
    <string name="visible_pref_turn_brightness_to_min">Turn brightness to minimum</string>
    <string name="visible_pref_widget_on_lockscreen">Widget on lock screen</string>
    <string name="visible_pref_snapshot">Snapshot</string>
    <string name="visible_pref_display_snapshot">Display snapshot</string>
    <string name="visible_pref_display_snapshot_summary_off">Enabling might slightly increase battery usage</string>
    <string name="visible_pref_display_snapshot_summary_on">Disabling might slightly improve battery life</string>
    <string name="visible_pref_snapshot_update_interval">Snapshot update</string>
    <string name="edit_menu_new_tab">New tab</string>
    <string name="edit_menu_rename_tab">Rename tab</string>
    <string name="edit_menu_move_left">Move left</string>
    <string name="edit_menu_move_right">Move right</string>
    <string name="edit_menu_delete_tab">Delete tab</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_tab">Create new tab</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="rename_tab">Rename tab</string>
    <string name="rename">Rename</string>
    <string name="connect">Connect</string>
    <string name="dialog_confirm_delete_message">"Are you sure you want to delete "</string>
    <string name="dialog_confirm_delete_title">Confirm delete</string>
    <string name="dialog_confirm_delete_yes">Yes</string>
    <string name="dialog_choose_function">Choose function:</string>
    <string name="dialog_choose_server">Servers found:</string>
    <string name="toast_no_servers_found">0 servers found</string>
    <string name="file_explorer_loading">Loading...</string>
    <string name="toast_server_unavailable">Cannot connect to server</string>
    <string name="filename">File:</string>
    <string name="visible_pref_volume_jump_message">How many % should the volume buttons change</string>
    <string name="visible_pref_time_jump_message">How many seconds should time jump buttons move</string>
    <string name="visible_pref_snapshot_update_interval_message">How often should snapshot be updated</string>
    <string name="visible_pref_factory_reset_category">Reset</string>
    <string name="visible_pref_factory_reset">Factory reset</string>
    <string name="visible_pref_factory_reset_message">This will reset all settings, including your buttons and tabs configuration to default state. Are you sure you want to continue?</string>
    <string name="fragment_server_finder_servers_found">Servers found:</string>
    <string name="widget_connecting_message">"Restoring connection: "</string>
    <string name="widget_connecting_title">MPC Remote: connecting</string>
    <string name="widget_disconnected_message">Touch to return to app.</string>
    <string name="widget_disconnected_title">MPC Remote: disconnected</string>
    <string name="file_explorer_current_directory">Current directory:</string>
    <string name="file_explorer_loaded">"Loaded file: "</string>
    <string name="file_explorer_dialog_file_chosen">File chosen:</string>
    <string name="file_explorer_dialog_load">Load</string>
    <string name="file_explorer_dialog_unknown_file_type">Unknown file type. MPC HC might not be able to play this file correctly.</string>
    <string name="help_text">If the remote can not connect to the server, follow these steps:\n\n1) Make sure the Android device is connected to the same Wi-Fi network as the MPC-HC server.\n\n2) Make sure MPC-HC player is running on the server.\n\n3) In the MPC-HC player, go to options (View -> Options or press \"O\" key). Then go to Player -> Web Interface tab and make sure \"Listen on port:\" checkbox is enabled. (see image)\n\n4) Make sure the port (default 13579) is the same as the port in MPC Remote app. You can change it in MPC-HC player or in MPC Remote app settings.\n\n5) If you wish to see the preview, make sure it is enabled in the MPC-HC player options (see image).</string>
    <string name="remote_zero_time" translatable="false">00:00:00</string>
    <string name="visible_pref_about">About</string>
    <string name="visible_pref_about_message">Version 1.0\nAuthor: Jakub Karczmarski\n\nContact: jakub.karczmarski@gmail.com\n\ngithub.com/retroprop</string>
    <string name="ok" translatable="false">OK</string>
    <string name="main_activity_snapshot_unavailable">NO PREVIEW\nAVAILABLE</string>


</resources>
